k8s/settings/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vuln-web-external
---
apiVersion: v1
kind: Namespace
metadata:
  name: vuln-ssh-internal
