k8s/settings/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: vuln-ssh
  policyTypes:
    - Ingress
  ingress: []

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-ssh
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: vuln-ssh
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vuln-web
    ports:
      - protocol: TCP
        port: 22
